<resources>
    <string name="app_name">ToolsDisplay</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="welcome_to">Welcome To</string>
    <string name="second_welcome_note">Power Tools | Store App</string>
    <string name="sign_in_label">Sign in to your account</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account_label">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="home_title">Brochure</string>

</resources>